Update VM args for launchers to export needed modules