@@ -31,4 +31,4 @@ REM Change to the Default Repast Simphony Directory
 CD %PROJECT_NAME%
 
 REM Start the Model
-START javaw -cp %CP% repast.simphony.runtime.RepastMain ./%SCENARIO_DIRECTORY%
+START javaw --add-modules=ALL-SYSTEM --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED -cp %CP% repast.simphony.runtime.RepastMain ./%SCENARIO_DIRECTORY%
